@@ -121,7 +121,6 @@ auto MAPBase<ForwardModel, MatrixType, SaType, SeType>
 {
     if (cache_valid)
     {
-        std::cout << "Using cached yi." << std::endl;
         return yi_cached;
     }
     else
