@@ -1,3 +1,14 @@
+2016-04-09  Simon Pfreundschuh  <simonpf@chalmers.se>
+
+	* arts-2-3-474
+
+	* methods.cc: Renamed WSM oem to OEM
+
+	* m_oem: Renamed oem to OEM. Added conjugate gradient versions
+	for each optimization method.
+
+	* 3rdparte/invlib/* invlib update.
+
 2016-04-07  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-475
